refactor: address code review feedback
- Remove @Value.Default from getVariables() (Immutables uses empty maps by default)
- Rename withExampleData to useExampleData in JSON schema and Java
- Remove "full" test case from PojoCompatibilityTest (keep only 3)
- Use @Captor annotation for ArgumentCaptor
- Use applyFilter() method to verify selector instead of comparing selectors
- Simplify tests for variables and example data
- Use Collections.emptyMap() instead of Map.of() for Java 8 compatibility

Co-authored-by: saig0 <4305769+saig0@users.noreply.github.com>