@@ -15,25 +15,26 @@
  */
 package io.camunda.process.test.impl.dsl;
 
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 
 import io.camunda.client.CamundaClient;
+import io.camunda.client.api.search.filter.UserTaskFilter;
 import io.camunda.process.test.api.CamundaProcessTestContext;
 import io.camunda.process.test.api.assertions.UserTaskSelector;
-import io.camunda.process.test.api.assertions.UserTaskSelectors;
 import io.camunda.process.test.api.dsl.ImmutableUserTaskSelector;
 import io.camunda.process.test.api.dsl.instructions.CompleteUserTaskInstruction;
 import io.camunda.process.test.api.dsl.instructions.ImmutableCompleteUserTaskInstruction;
 import io.camunda.process.test.impl.dsl.instructions.CompleteUserTaskInstructionHandler;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Answers;
 import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -46,6 +47,10 @@ public class CompleteUserTaskInstructionTest {
   private CamundaClient camundaClient;
 
   @Mock private AssertionFacade assertionFacade;
+
+  @Mock private UserTaskFilter userTaskFilter;
+
+  @Captor private ArgumentCaptor<UserTaskSelector> selectorCaptor;
 
   private final CompleteUserTaskInstructionHandler instructionHandler =
       new CompleteUserTaskInstructionHandler();
@@ -63,13 +68,10 @@ public class CompleteUserTaskInstructionTest {
     instructionHandler.execute(instruction, processTestContext, camundaClient, assertionFacade);
 
     // then
-    final ArgumentCaptor<UserTaskSelector> selectorCaptor =
-        ArgumentCaptor.forClass(UserTaskSelector.class);
-    verify(processTestContext).completeUserTask(selectorCaptor.capture(), eq(Map.of()));
+    verify(processTestContext).completeUserTask(selectorCaptor.capture(), eq(Collections.emptyMap()));
 
-    final UserTaskSelector capturedSelector = selectorCaptor.getValue();
-    final UserTaskSelector expectedSelector = UserTaskSelectors.byTaskName("Approve Request");
-    assertSelectorsAreEqual(capturedSelector, expectedSelector);
+    selectorCaptor.getValue().applyFilter(userTaskFilter);
+    verify(userTaskFilter).taskName("Approve Request");
 
     verifyNoMoreInteractions(processTestContext, camundaClient, assertionFacade);
   }
@@ -86,13 +88,10 @@ public class CompleteUserTaskInstructionTest {
     instructionHandler.execute(instruction, processTestContext, camundaClient, assertionFacade);
 
     // then
-    final ArgumentCaptor<UserTaskSelector> selectorCaptor =
-        ArgumentCaptor.forClass(UserTaskSelector.class);
-    verify(processTestContext).completeUserTask(selectorCaptor.capture(), eq(Map.of()));
+    verify(processTestContext).completeUserTask(selectorCaptor.capture(), eq(Collections.emptyMap()));
 
-    final UserTaskSelector capturedSelector = selectorCaptor.getValue();
-    final UserTaskSelector expectedSelector = UserTaskSelectors.byElementId("task1");
-    assertSelectorsAreEqual(capturedSelector, expectedSelector);
+    selectorCaptor.getValue().applyFilter(userTaskFilter);
+    verify(userTaskFilter).elementId("task1");
 
     verifyNoMoreInteractions(processTestContext, camundaClient, assertionFacade);
   }
@@ -110,14 +109,10 @@ public class CompleteUserTaskInstructionTest {
     instructionHandler.execute(instruction, processTestContext, camundaClient, assertionFacade);
 
     // then
-    final ArgumentCaptor<UserTaskSelector> selectorCaptor =
-        ArgumentCaptor.forClass(UserTaskSelector.class);
-    verify(processTestContext).completeUserTask(selectorCaptor.capture(), eq(Map.of()));
+    verify(processTestContext).completeUserTask(selectorCaptor.capture(), eq(Collections.emptyMap()));
 
-    final UserTaskSelector capturedSelector = selectorCaptor.getValue();
-    final UserTaskSelector expectedSelector =
-        UserTaskSelectors.byProcessDefinitionId("my-process");
-    assertSelectorsAreEqual(capturedSelector, expectedSelector);
+    selectorCaptor.getValue().applyFilter(userTaskFilter);
+    verify(userTaskFilter).processDefinitionId("my-process");
 
     verifyNoMoreInteractions(processTestContext, camundaClient, assertionFacade);
   }
@@ -139,16 +134,12 @@ public class CompleteUserTaskInstructionTest {
     instructionHandler.execute(instruction, processTestContext, camundaClient, assertionFacade);
 
     // then
-    final ArgumentCaptor<UserTaskSelector> selectorCaptor =
-        ArgumentCaptor.forClass(UserTaskSelector.class);
-    verify(processTestContext).completeUserTask(selectorCaptor.capture(), eq(Map.of()));
+    verify(processTestContext).completeUserTask(selectorCaptor.capture(), eq(Collections.emptyMap()));
 
-    final UserTaskSelector capturedSelector = selectorCaptor.getValue();
-    final UserTaskSelector expectedSelector =
-        UserTaskSelectors.byProcessDefinitionId("my-process")
-            .and(UserTaskSelectors.byElementId("task1"))
-            .and(UserTaskSelectors.byTaskName("Review Task"));
-    assertSelectorsAreEqual(capturedSelector, expectedSelector);
+    selectorCaptor.getValue().applyFilter(userTaskFilter);
+    verify(userTaskFilter).processDefinitionId("my-process");
+    verify(userTaskFilter).elementId("task1");
+    verify(userTaskFilter).taskName("Review Task");
 
     verifyNoMoreInteractions(processTestContext, camundaClient, assertionFacade);
   }
@@ -170,13 +161,7 @@ public class CompleteUserTaskInstructionTest {
     instructionHandler.execute(instruction, processTestContext, camundaClient, assertionFacade);
 
     // then
-    final ArgumentCaptor<UserTaskSelector> selectorCaptor =
-        ArgumentCaptor.forClass(UserTaskSelector.class);
     verify(processTestContext).completeUserTask(selectorCaptor.capture(), eq(variables));
-
-    final UserTaskSelector capturedSelector = selectorCaptor.getValue();
-    final UserTaskSelector expectedSelector = UserTaskSelectors.byElementId("task1");
-    assertSelectorsAreEqual(capturedSelector, expectedSelector);
 
     verifyNoMoreInteractions(processTestContext, camundaClient, assertionFacade);
   }
@@ -187,20 +172,14 @@ public class CompleteUserTaskInstructionTest {
     final CompleteUserTaskInstruction instruction =
         ImmutableCompleteUserTaskInstruction.builder()
             .userTaskSelector(ImmutableUserTaskSelector.builder().elementId("task1").build())
-            .withExampleData(true)
+            .useExampleData(true)
             .build();
 
     // when
     instructionHandler.execute(instruction, processTestContext, camundaClient, assertionFacade);
 
     // then
-    final ArgumentCaptor<UserTaskSelector> selectorCaptor =
-        ArgumentCaptor.forClass(UserTaskSelector.class);
     verify(processTestContext).completeUserTaskWithExampleData(selectorCaptor.capture());
-
-    final UserTaskSelector capturedSelector = selectorCaptor.getValue();
-    final UserTaskSelector expectedSelector = UserTaskSelectors.byElementId("task1");
-    assertSelectorsAreEqual(capturedSelector, expectedSelector);
 
     verifyNoMoreInteractions(processTestContext, camundaClient, assertionFacade);
   }
@@ -216,32 +195,15 @@ public class CompleteUserTaskInstructionTest {
         ImmutableCompleteUserTaskInstruction.builder()
             .userTaskSelector(ImmutableUserTaskSelector.builder().elementId("task1").build())
             .putAllVariables(variables)
-            .withExampleData(true)
+            .useExampleData(true)
             .build();
 
     // when
     instructionHandler.execute(instruction, processTestContext, camundaClient, assertionFacade);
 
     // then
-    final ArgumentCaptor<UserTaskSelector> selectorCaptor =
-        ArgumentCaptor.forClass(UserTaskSelector.class);
     verify(processTestContext).completeUserTaskWithExampleData(selectorCaptor.capture());
 
-    final UserTaskSelector capturedSelector = selectorCaptor.getValue();
-    final UserTaskSelector expectedSelector = UserTaskSelectors.byElementId("task1");
-    assertSelectorsAreEqual(capturedSelector, expectedSelector);
-
     verifyNoMoreInteractions(processTestContext, camundaClient, assertionFacade);
-  }
-
-  private void assertSelectorsAreEqual(
-      final UserTaskSelector actual, final UserTaskSelector expected) {
-    // Compare selectors by their string representation since UserTaskSelector
-    // implementations may not implement equals()
-    if (!actual.describe().equals(expected.describe())) {
-      throw new AssertionError(
-          String.format(
-              "Expected selector [%s] but got [%s]", expected.describe(), actual.describe()));
-    }
   }
 }
